<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:android1="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_detail_edit"
        android:title="@string/edit"
        android1:icon="@drawable/ic_action_edit_white"
        app:showAsAction="always"
        />
    <item android:id="@+id/menu_item_detail_share"
        android:title="@string/share"
        android1:icon="@drawable/ic_action_share_white"
        app:showAsAction="ifRoom"
        />
    <item android1:id="@+id/menu_item_detail_location"
        android1:title="@string/location"
        android1:icon="@drawable/ic_action_location_white"
        app:showAsAction="ifRoom"
        />
    <item android1:id="@+id/menu_item_detail_delete"
        android1:title="@string/remove"
        android1:icon="@drawable/ic_action_trash_white"
        app:showAsAction="ifRoom"
        />
</menu>  
