<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bodyBackground_light_grey"
    >

    <include layout="@layout/tool_bar"
             android:id="@+id/edit_item_toolbar"
        />

    <!-- we must use a relativelayout here to correctly position the scrollview and the footer.
        the footer must be defined before the scrollview and the scrollview's aligment
        must be set to android:layout_above="@id/footer_bar. This will make sure that
        the footer does not disappear when the content in the scrollview grows up.
        This trick takes me hours to figure out! -->
    <RelativeLayout
        android:id="@+id/addItem"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/bodyBackground_light_grey">

        <LinearLayout style="@style/FooterBar"
            android:id="@+id/footer_bar">
            <ImageButton style="@style/TitleBarAction"
                android:id="@+id/imageButton_map"
                android:contentDescription="@string/description_location"
                android:src="@drawable/ic_action_location"
                android:background="@drawable/selectable_background_wishlist"
                android:onClick="onClickMap"
                android:layout_gravity="left"
                android:layout_weight="1"/>
            <!--android:src="@drawable/ic_pin_blue_default_72by72"-->

            <ImageButton style="@style/TitleBarAction"
                android:id="@+id/imageButton_camera"
                android:src="@drawable/ic_action_camera"
                android:background="@drawable/selectable_background_wishlist"
                android:contentDescription="@string/description_camera"
                android:onClick="onClickCamera"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <!--android:src="@drawable/ic_camera_default_72by72"-->

            <ImageButton style="@style/TitleBarAction"
                android:id="@+id/imageButton_tag"
                android:contentDescription="@string/description_tag"
                android:src="@drawable/ic_action_tag"
                android:background="@drawable/selectable_background_wishlist"
                android:onClick="onClickTag"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <!--android:src="@drawable/ic_tag_default_72by72"-->
        </LinearLayout>

        <ScrollView
            android:id="@+id/editItem_ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/footer_bar"
            android:background="@color/bodyBackground_light_grey"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bodyBackground_light_grey"
                android:orientation="vertical" >

                <FrameLayout
                    android:id="@+id/image_photo_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:foreground="?android:attr/selectableItemBackground">
                    <!-- framelayout is for tap effect -->

                    <ImageView
                        android:id="@+id/image_photo"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center_horizontal"
                        />
                </FrameLayout>

                    <EditText
                    android:id="@+id/itemname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Name"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/bodyText_dark_grey"
                    android:imeOptions="flagNoExtractUi"
                    />
                <!--<com.wish.wishlist.widgets.ClearableEditText-->

                <com.wish.wishlist.widgets.ClearableEditText
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Note"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/bodyText_dark_grey"
                    android:imeOptions="flagNoExtractUi"
                    />

                <com.wish.wishlist.widgets.ClearableEditText
                    android:id="@+id/price"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Price"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/bodyText_dark_grey"
                    android:imeOptions="flagNoExtractUi"
                    />

                <com.wish.wishlist.widgets.ClearableEditText
                    android:id="@+id/store"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Store"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/bodyText_dark_grey"
                    android:imeOptions="flagNoExtractUi"
                    />

                <com.wish.wishlist.widgets.ClearableEditText
                    android:id="@+id/location"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Location"
                    android:inputType="textMultiLine|textPostalAddress|textCapWords"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/bodyText_dark_grey"
                    android:imeOptions="flagNoExtractUi"
                    />

                <com.wish.wishlist.widgets.ClearableEditText
                    android:id="@+id/link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Link"
                    android:inputType="textMultiLine|textPostalAddress|textCapWords"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/bodyText_dark_grey"
                    android:imeOptions="flagNoExtractUi"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/completeCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Mark as completed"
                        android:visibility="gone"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/bodyText_dark_grey"
                        android:layout_centerVertical="true"/>
                    <ImageView
                        android:id="@+id/completeImageView"
                        android:layout_width="@dimen/ic_action_size_medium"
                        android:layout_height="@dimen/ic_action_size_medium"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_action_check_yellow"
                        android:layout_centerVertical="true"
                        android:visibility="gone"
                        >
                    </ImageView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/privateCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Private"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/bodyText_dark_grey"
                        android:layout_centerVertical="true"
                        />
                    <ImageView
                        android:id="@+id/privateImageView"
                        android:layout_width="@dimen/ic_action_size_medium"
                        android:layout_height="@dimen/ic_action_size_medium"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_action_lock_yellow"
                        android:layout_centerVertical="true"
                        android:visibility="gone"
                        >
                    </ImageView>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>
